--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-loader": "^8.0.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-plugin-transform-regenerator": "^6.26.0",
+    "css-loader": "^2.1.1",
     "dayjs": "^1.7.5",
     "dotenv": "^7.0.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
