--- a/data/template/config.json
+++ b/data/template/config.json
@@ -15,16 +15,7 @@
     "title": "過去三十日數據",
     "description": "過去三十日數據"
   },
-  "title": "Calpa 的技術博客",
-  "gitalk": {
-    "repo": "calpa.github.io",
-    "admin": ["calpa"],
-    "owner": "calpa",
-    "clientID": "18255f031b5e11edd98a",
-    "clientSecret": "2ff6331da9e53f9a91bcc991d38d550c85026714",
-    "pagerDirection": "first",
-    "distractionFreeMode": true
-  },
+  "title": "Miguel",
   "License": "by",
   "friends": [
     {
@@ -37,19 +28,15 @@
   "gaTrackId": "UA-84737574-3",
   "navbarList": [
     {
-      "href": "/2018/12/24/front-end-blog-system-review-2018/",
-      "title": "網站數據"
-    },
-    {
-      "href": "/guestbook/",
-      "title": "留言簿"
+      "href": "/my-experience-with-a-japanese-toilet/",
+      "title": "Japanese Toilet"
     },
     {
       "href": "/tags/",
       "title": "Tags"
     },
     {
-      "href": "/2018/05/01/about-calpa-liu/",
+      "href": "/about-miguel/",
       "title": "About"
     }
   ],
