--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-transform-regenerator": "^6.26.0",
     "css-loader": "^2.1.1",
     "dayjs": "^1.7.5",
+    "disqus-react": "^1.0.5",
     "dotenv": "^7.0.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "gatsby": "^2.2.1",
@@ -33,11 +34,14 @@
     "gatsby-plugin-sitemap": "^2.0.10",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.3",
     "gatsby-remark-autolink-headers": "^2.0.16",
+    "gatsby-remark-embed-video": "^1.7.1",
+    "gatsby-remark-embed-youtube": "^0.0.7",
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-prismjs": "^3.2.6",
+    "gatsby-remark-responsive-iframe": "^2.1.1",
+    "gatsby-remark-video": "^1.2.1",
     "gatsby-source-filesystem": "^2.0.27",
     "gatsby-transformer-remark": "^2.3.7",
-    "gitalk": "^1.4.0",
     "han-css": "^3.3.0",
     "highlight.js": "^9.12.0",
     "lozad": "^1.6.0",
