--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gatsby-plugin-sitemap": "^2.0.10",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.3",
     "gatsby-remark-autolink-headers": "^2.0.16",
+    "gatsby-remark-component": "^1.1.3",
     "gatsby-remark-embed-video": "^1.7.1",
     "gatsby-remark-embed-youtube": "^0.0.7",
     "gatsby-remark-external-links": "0.0.4",
@@ -41,7 +42,7 @@
     "gatsby-remark-responsive-iframe": "^2.1.1",
     "gatsby-remark-video": "^1.2.1",
     "gatsby-source-filesystem": "^2.0.27",
-    "gatsby-transformer-remark": "^2.3.7",
+    "gatsby-transformer-remark": "^2.3.12",
     "han-css": "^3.3.0",
     "highlight.js": "^9.12.0",
     "lozad": "^1.6.0",
@@ -52,6 +53,7 @@
     "react-dom": "^16.6.3",
     "react-ga": "^2.5.3",
     "react-helmet": "^5.2.0",
+    "react-scroll-parallax": "^2.1.2",
     "react-transition-group": "^2.5.2",
     "rimraf": "^2.6.2",
     "smooth-scroll": "^16.0.0",
