--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "blog",
   "description": "Calpa's Blog",
   "version": "1.0.0",
-  "author": "Calpa Liu <calpaliu@gmail.com>",
+  "author": "AceroM",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.4",
     "@fortawesome/free-brands-svg-icons": "^5.3.1",
