--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-ga": "^2.5.3",
     "react-helmet": "^5.2.0",
     "react-scroll-parallax": "^2.1.2",
+    "react-sound": "^1.2.0",
     "react-transition-group": "^2.5.2",
     "rimraf": "^2.6.2",
     "smooth-scroll": "^16.0.0",
