--- a/data/template/config.json
+++ b/data/template/config.json
@@ -24,7 +24,7 @@
     }
   ],
   "iconUrl": "https://i.imgur.com/w0Y7VzX.jpg",
-  "wordings": ["ケツを食べる", "wwwwwwwww"],
+  "wordings": ["トイレが好きです", "wwwwwwwww"],
   "gaTrackId": "UA-84737574-3",
   "navbarList": [
     {
